@@ -1,0 +1,249 @@
+8RXN
+5PTI 
+1ARB 
+1IGD 
+1IFC 
+7RSA 
+1CUS 
+1CSE
+1PTX 
+1PLC 
+1XSO
+1YCC 
+1RCF 
+3EBX 
+1RRO 
+4PTP 
+1FUS 
+135L 
+3SDH
+2SGA 
+2HBG 
+2CTC 
+256B
+1POA 
+2END 
+5P21 
+1ECD 
+1XYZ
+2OLB
+2PHY 
+1MBD 
+1XNB 
+2MCM 
+2CBA 
+1FLP 
+4GCR 
+1ISU
+1TCA 
+1CKA
+2ER7
+1EZM 
+2AYH 
+1WFB
+3PTE 
+2RHE 
+153L 
+1TGX
+1PTF 
+2RN2 
+1PPN 
+1HFC 
+4FGF 
+1THB
+1PAZ 
+1CSH 
+8TLN
+2OVO 
+3GRS 
+2SIL
+1ABE 
+3CHY 
+1LAM 
+1LID 
+1PHP 
+1MRJ 
+1SHA
+1NIF 
+1NFP 
+1SNC 
+1ARU 
+1SCS 
+1FNC 
+3DFR 
+1HTR
+1DTS 
+451C 
+4ICB 
+4DFR
+1KAP
+1PHE 
+2CPL 
+3LZM 
+1FXD 
+2MHR 
+1KNB 
+2GDM 
+1SRI
+2TRX
+1MBA 
+2DRI 
+1FKJ 
+1ERL 
+2WRP
+1ADS 
+1FRD 
+1CPC
+1TTA
+2UTG
+1AKY 
+3CLA 
+1CTF 
+2MSB
+1MOL
+1COT
+1GOF
+1SBP 
+2CCY
+1ONC 
+1NSC
+1THV 
+1ROP
+1FAS
+1IAE 
+1OSA 
+8DFR 
+1AAJ 
+3COX 
+1ILK 
+1GCA 
+2AZA
+1THG 
+1KPT
+1VHH 
+1VFA 
+1ATL
+2GST
+1AMP 
+2CYR 
+3TGL 
+1IDA
+1HPI 
+1BTL 
+1LST 
+1UBI 
+1CHD 
+2BOP
+1PGS 
+2CYP 
+1HPM 
+2OHX
+2TGI
+1PDA 
+9WGA
+1PK4
+1HXN
+2SIC
+1MNG
+1UDG
+4ENL
+1HYL
+1DUP
+1EPT
+1TML
+1CEL
+1TPH
+1GLQ
+1BBH
+1TGS
+2POR 
+1HYP 
+1BMD
+1LMB
+1GPR 
+1PBE 
+1LFA
+1TIF 
+1BGH 
+2MNR 
+1CMB
+1TEN 
+1NPK 
+2HTS 
+1EDE 
+1MML 
+7AAT
+1SLT
+1YTB
+1TIB 
+2ABK 
+1VCA
+2SPC
+2FX2 
+1FLR
+2LHB 
+1CHM
+2RSP
+2CMD
+1REG
+1FIV
+1RSY 
+2PRD 
+1LIS 
+1CYJ 
+1CNS
+1ABO
+1REC 
+2EBN 
+2CHS
+1MPP 
+1RVA
+1UKZ 
+1PRN 
+1DAA
+1PNE 
+1LTS
+2HPD
+1DSB
+2TSC
+1OYC 
+1CLC
+2I1B 
+1GKY 
+1BAM 
+2DNJ
+1WHT
+1ALK
+6INS
+1ORA 
+1ACF 
+2SCP
+1LED 
+1RIS 
+1LCT 
+2KAU
+2PIA 
+1NBA
+1LKI 
+1RCD 
+3IL8 
+1MJC 
+1HVD 
+1FRP
+1GOX 
+1FIA
+1POC
+1CDC
+1R69
+1DDT 
+1CDK
+1CEW
+2PGD 
+1ADE
+1HOE 
+1PBN 
+1BBP
+6LDH 
+1CFB 
+1TIG 
+1CSN
